--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "formik": "^2.4.5",
     "modern-normalize": "^2.0.0",
     "nanoid": "^5.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
+    "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
