--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "formik": "^2.4.5",
@@ -21,6 +22,7 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
   },
