--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.11.0",
     "@material/button": "^14.0.0",
     "@material/drawer": "^14.0.0",
+    "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
@@ -32,6 +34,7 @@
     "react-router-dom": "^6.22.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.8",
     "yup": "^1.3.3"
   },
   "devDependencies": {
