--- a/package.json
+++ b/package.json
@@ -12,18 +12,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@material/button": "^14.0.0",
-    "@material/drawer": "^14.0.0",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "clsx": "^2.1.0",
     "formik": "^2.4.5",
-    "modern-normalize": "^2.0.0",
-    "nanoid": "^5.0.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hot-toast": "^2.4.1",
@@ -34,7 +31,6 @@
     "react-router-dom": "^6.22.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.8",
     "yup": "^1.3.3"
   },
   "devDependencies": {
